Change dashboard to show single day plans

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -8,9 +8,7 @@
 </article>
 <article>
     <header>
-        <h3>My plan</h3>
+        <h3>My plan today</h3>
     </header>
-    <section *ngFor="let date of remainingDaysOfWeek">
-        <activity-plan-day [date]="date"></activity-plan-day>
-    </section>
+    <activity-plan-day ></activity-plan-day>
 </article>
