--- a/client/src/pages/activity-log/activity-log.html
+++ b/client/src/pages/activity-log/activity-log.html
@@ -1,1 +1,4 @@
-<p>Put activity log here!</p>
+<article>
+    <h3>Details</h3>
+    <heartsteps-activity-summary-list ></heartsteps-activity-summary-list>
+</article>
