--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -1,14 +1,17 @@
 <div>
     <article>
-        <a routerLink="/settings/contact">Contact information</a>
+        <ul>
+            <li><a routerLink="/settings/contact">Contact information</a></li>
+            <li><a routerLink="/settings/places">My locations</a></li>
+            <li><a routerLink="/settings/reflection-time">Weekly reflection time</a></li>
+            <li><a routerLink="/settings/suggestion-times">Activity suggestion time</a></li>
+        </ul>
     </article>
     <article>
-        <a routerLink="/settings/places">My locations</a>
-    </article> 
-    <article>
-        <a routerLink="/settings/reflection-time">Weekly reflection time</a>
-    </article> 
-    <article>
-        <a routerLink="/settings/suggestion-times">Activity suggestion time</a>
+        <h3>Testing Area</h3>
+        <p>This area is only visible to testing participants.</p>
+        <ul>
+            <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
+        </ul>
     </article>
 </div>
