Added unenroll button and load data on authentication

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -14,4 +14,9 @@
             <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
         </ul>
     </article>
+    <article>
+        <h3>Unenroll</h3>
+        <p>This remove from the HeartSteps study. Your data will continue to be saved in the heartsteps server.</p>
+        <button (click)="unenroll()">Unenroll</button>
+    </article>
 </div>
