Messing with CSS

--- a/client/src/heartsteps/activity/plan.modal.html
+++ b/client/src/heartsteps/activity/plan.modal.html
@@ -8,7 +8,7 @@
         <label for="activity-plan-type">Activity</label>
         <heartsteps-activity-type id="activity-plan-type" name="activity" formControlName="activity"></heartsteps-activity-type>
     </div>
-    <fieldset class="intensity">
+    <fieldset class="intensity input-group">
         <legend>Intensity</legend>
         <ul>
             <li>
