--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -17,6 +17,6 @@
     <article>
         <h3>Unenroll</h3>
         <p>This remove from the HeartSteps study. Your data will continue to be saved in the heartsteps server.</p>
-        <button (click)="unenroll()">Unenroll</button>
+        <button class="danger" (click)="unenroll()">Unenroll</button>
     </article>
 </div>
