--- a/client/src/heartsteps/activity/daily-activities-update.html
+++ b/client/src/heartsteps/activity/daily-activities-update.html
@@ -1,4 +1,6 @@
-<button *ngIf="!loading" class="refresh" (click)="refresh()">Update Fitbit data</button>
-<p *ngIf="!loading && lastUpdate">Last updated {{updateTimeFormatted}}</p>
-<p *ngIf="!loading && !lastUpdate">Not updated today</p>
+<button *ngIf="!loading" (click)="refresh()">
+    Update Fitbit data
+    <span *ngIf="!loading && lastUpdate">Last updated {{updateTimeFormatted}}</span>
+    <span *ngIf="!loading && !lastUpdate">Not updated today</span>
+</button>
 <div *ngIf="loading">Loading activities</div>
