--- a/client/src/heartsteps/places/place-edit.html
+++ b/client/src/heartsteps/places/place-edit.html
@@ -1,10 +1,8 @@
-<ion-header>
-    <ion-navbar>
-        <ion-title>Edit Location</ion-title>
-        <a (click)="dismiss()">Cancel</a>
-    </ion-navbar>
-</ion-header>
-<ion-content padding>
+<article class="page">
+    <header>
+        <h2>Edit Location</h2>
+        <a class="back" (click)="dismiss()">Cancel</a>
+    </header>
     <form class="map">
         <p>Enter an address or tap on the map to choose a location.</p>
         <ion-item>
@@ -18,9 +16,9 @@
         </ion-list>
         <div #map id="map" width="100%" height="200px"></div>
         <div class="controls">
-            <button *ngIf="updateView" (click)="delete()">Delete</button>
+            <button *ngIf="!updateView" class="primary" (click)="update()" >Save</button>
             <button *ngIf="updateView" (click)="update()" >Update</button>
-            <button *ngIf="!updateView" (click)="update()" >Save</button>
+            <button *ngIf="updateView" class="danger" (click)="delete()">Delete</button>
         </div>
     </form>
-</ion-content>
+</article>
