Add placeholders for test functionality

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -11,7 +11,10 @@
         <h3>Testing Area</h3>
         <p>This area is only visible to testing participants.</p>
         <ul>
+            <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
+            <li><button (click)="testMorningMessage()">Send Morning Message</button></li>
             <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
+            <li><a>Weekly Survey</a></li>
         </ul>
     </article>
     <article>
