Add draft version of weekly survey

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -14,7 +14,7 @@
             <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
             <li><button (click)="testMorningMessage()">Send Morning Message</button></li>
             <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
-            <li><a>Weekly Survey</a></li>
+            <li><a routerLink="/weekly-survey">Weekly Survey</a></li>
         </ul>
     </article>
     <article>
