--- a/client/src/pages/onboard/onboard.html
+++ b/client/src/pages/onboard/onboard.html
@@ -1,12 +1,12 @@
-<article class="page">
+<article class="page slider">
     <header>
+        <h2>{{pageTitle}}</h2>
         <button (click)="prevPage()" class="back">Back</button>
         <div class="pagination-bullets">
             <span *ngFor="let page of pages; index as i" class="pagination-bullet" [ngClass]="{active: index == i}" >{{i}}</span>
         </div>
     </header>
     <div>
-        <h2>{{pageTitle}}</h2>
         <div #screenDisplay></div>
     </div>
 </article>
