Messy implementation of setting goals for weeks

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -4,6 +4,7 @@
             <li><a routerLink="/settings/contact">Contact information</a></li>
             <li><a routerLink="/settings/places">My locations</a></li>
             <li><a routerLink="/settings/reflection-time">Weekly reflection time</a></li>
+            <li><a routerLink="/settings/weekly-goal">Weekly goal</a></li>
             <li><a routerLink="/settings/suggestion-times">Activity suggestion time</a></li>
         </ul>
     </article>
