Allow current week to update UI state

--- a/client/src/heartsteps/activity/daily-summary.html
+++ b/client/src/heartsteps/activity/daily-summary.html
@@ -6,3 +6,4 @@
     <li>{{activitySummary.totalSteps}} <span>Steps</span></li>
     <li>{{activitySummary.totalMiles}} <span>Miles</span></li>
 </ul>
+<p *ngIf="!activitySummary">No data</p>
