--- a/client/src/pages/settings/goal.page.html
+++ b/client/src/pages/settings/goal.page.html
@@ -3,5 +3,5 @@
         <h2>Weekly Goal</h2>
         <a class="back" (click)="goBack()">Back</a>
     </header>
-    <heartsteps-weekly-goal [week]="week" (saved)="goBack()"></heartsteps-weekly-goal>
+    <heartsteps-weekly-goal [week]="week" (saved)="saved()"></heartsteps-weekly-goal>
 </article>
