Add boilerplate for weekly-survey message to be shown

--- a/client/src/pages/settings/settings-page.html
+++ b/client/src/pages/settings/settings-page.html
@@ -15,6 +15,7 @@
             <li><button (click)="testAntisedentaryMessage()">Send Anti Sedentary Message</button></li>
             <li><button (click)="testMorningMessage()">Send Morning Message</button></li>
             <li><button (click)="testWalkingSuggestion()">Send Walking Suggestion</button></li>
+            <li><button (click)="testWeeklySurveyMessage()">Send Weekly Survey</button></li>
             <li><a (click)="navigateToCurrentWeek()">Weekly Survey</a></li>
         </ul>
     </article>
