Add take survey banner to dashboard

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -1,3 +1,10 @@
+<nav class="banners">
+    <ul>
+        <li *ngIf="weeklySurvey"><a (click)="navigateToWeeklySurvey()">
+            It's time to make your weekly plan and set your goal for the following week.
+        </a></li>
+    </ul>
+</nav>
 <article>
     <header>
         <h3>My progress</h3>
