--- a/client/src/pages/activity-plan/plan.page.html
+++ b/client/src/pages/activity-plan/plan.page.html
@@ -1,5 +1,1 @@
-<article *ngFor="let date of dates">
-    <h3>{{date | date:"EEEE, M/d"}}</h3>
-    <activity-plan-day [date]="date"></activity-plan-day>
-    <button (click)="addActivity(date)" >Add an activity</button>
-</article>
+<heartsteps-weekly-plan [week]="week"></heartsteps-weekly-plan>
