Finish activity plan refactor

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -8,10 +8,10 @@
 <article>
     <h3>My progress</h3>
     <heartsteps-weekly-progress></heartsteps-weekly-progress>
-    <heartsteps-activity-daily-summary></heartsteps-activity-daily-summary>
+    <heartsteps-activity-daily-summary [date]="today"></heartsteps-activity-daily-summary>
     <heartsteps-activity-daily-update></heartsteps-activity-daily-update>
 </article>
 <article>
     <h3>My plan today</h3>
-    <activity-plan-day ></activity-plan-day>
+    <activity-plan-day [date]="today" ></activity-plan-day>
 </article>
