Split activity-log module from activity

--- a/client/src/pages/activity-log/activity-summary.page.html
+++ b/client/src/pages/activity-log/activity-summary.page.html
@@ -1,15 +1,17 @@
-<div class="page">
+<article class="page">
     <header>
         <h2>Stats</h2>
         <a class="back" (click)="back()">Back</a>
     </header>
-    <article>
+    <div>
         <h3>Activities Tracked</h3>
         <heartsteps-activity-daily-summary [date]="date"></heartsteps-activity-daily-summary>
-        <ul class="nav">
-            <li *ngFor="let log of logs">
-                <heartsteps-activity-log [activityLog]="log"></heartsteps-activity-log>
-            </li>
-        </ul>
-    </article>
-</div>
+        <nav>
+            <ul>
+                <li *ngFor="let log of logs" (click)="openActivityLog(log)">
+                    <heartsteps-activity-log [activityLog]="log"></heartsteps-activity-log>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</article>
