Made activity logs editable

--- a/client/src/pages/activity-log/activity-summary.page.html
+++ b/client/src/pages/activity-log/activity-summary.page.html
@@ -8,8 +8,10 @@
         <heartsteps-activity-daily-summary [date]="date"></heartsteps-activity-daily-summary>
         <nav>
             <ul>
-                <li *ngFor="let log of logs" (click)="openActivityLog(log)">
-                    <heartsteps-activity-log [activityLog]="log"></heartsteps-activity-log>
+                <li *ngFor="let log of logs">
+                    <a (click)="openActivityLog(log)">
+                        <heartsteps-activity-log [activityLog]="log"></heartsteps-activity-log>
+                    </a>
                 </li>
             </ul>
         </nav>
