Add anchor message to dashboard

--- a/client/src/pages/dashboard/dashboard.html
+++ b/client/src/pages/dashboard/dashboard.html
@@ -15,3 +15,4 @@
     <h3>My plan today</h3>
     <activity-plan-day [date]="today" ></activity-plan-day>
 </article>
+<heartsteps-anchor-message></heartsteps-anchor-message>
