--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,6 +1,8 @@
-<div class="heartsteps-logo">Heartsteps</div>
-<h1>Welcome!</h1>
+<div>
+    <div class="heartsteps-logo">Heartsteps</div>
+    <h1>Welcome!</h1>
+    <p class="headline">Register your account and get started.</p>
+</div>
 <div class="controls">
-    <p>Enroll to create your account and get started.</p>
     <button (click)="goToEnrollPage()">Enroll</button>
 </div>
