--- a/client/src/heartsteps/enrollment/enroll.html
+++ b/client/src/heartsteps/enrollment/enroll.html
@@ -5,14 +5,16 @@
   </header>
   <form [formGroup]="enrollmentForm" (ngSubmit)="enroll()" >
     <p>Enter the entry token included in the invitation letter you received in the mail.</p>
-    <ion-item>
-      <ion-label stacked>Entry Code</ion-label>
-      <ion-input type="text" formControlName="entryToken"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label stacked>Birth year</ion-label>
-      <ion-input type="number" formControlName="birthYear"></ion-input>
-    </ion-item>
+    <app-text-field
+      formControlName="entryToken"
+      label="Entry code"
+      >
+    </app-text-field>
+    <app-year-field
+      formControlName="birthYear"
+      label="Birth year"
+      >
+    </app-year-field>
     <div class="controls">
         <p *ngIf="error" class="error">{{error}}</p>
         <button >Enroll</button>
