Split up daily-summaries

--- a/client/src/pages/home/stats.page.html
+++ b/client/src/pages/home/stats.page.html
@@ -1,4 +1,4 @@
 <article>
     <h3>Details</h3>
-    <heartsteps-activity-summary-list ></heartsteps-activity-summary-list>
+    <pages-daily-summary-list [summaries]="dailySummaries"></pages-daily-summary-list>
 </article>
