--- a/client/src/heartsteps/daily-summaries/daily-activities-update.html
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.html
@@ -1,5 +1,4 @@
 <button (click)="refresh()">
     Update Fitbit data
-    <span *ngIf="!loading && lastUpdate">Last updated {{updateTimeFormatted}}</span>
-    <span *ngIf="!loading && !lastUpdate">Not updated today</span>
+    <span>Last updated {{updateTimeFormatted}}</span>
 </button>
