Remove loading modal from update daily summary

--- a/client/src/heartsteps/daily-summaries/daily-activities-update.html
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.html
@@ -1,4 +1,7 @@
-<button (click)="refresh()">
+<button 
+    (click)="refresh()"
+    [ngClass]="{'is-loading':loading}"
+    >
     Update Fitbit data
     <span>Last updated {{updateTimeFormatted}}</span>
 </button>
