Add page component to standardize pages

--- a/client/src/pages/settings/contact-page.html
+++ b/client/src/pages/settings/contact-page.html
@@ -1,7 +1,9 @@
-<article class="page">
-    <header>
-        <h2>Contact Information</h2>
-        <a class="back" (click)="goBack()">Back</a>
-    </header>
-    <heartsteps-participant-information (saved)="goBack()"></heartsteps-participant-information>
-</article>
+<app-page
+    title="Contact Information"
+    (onDismiss)="goBack()"
+    >
+    <heartsteps-participant-information 
+        (saved)="goBack()"
+        >
+    </heartsteps-participant-information>
+</app-page>
