Route and store data messages

--- a/client/src/pages/notifications/notification.page.html
+++ b/client/src/pages/notifications/notification.page.html
@@ -1,4 +1,4 @@
-<div *ngIf="notification">
-    <p class="large">{{notification.body}}</p>
+<article>
+    <p class="headline">{{body}}</p>
     <button (click)="dismiss()">Ok</button>
-</div>
+</article>
