--- a/client/src/heartsteps/daily-summaries/daily-activities-update.html
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.html
@@ -1,7 +1,7 @@
-<button 
+<button *ngIf="!loading"
     (click)="refresh()"
-    [ngClass]="{'is-loading':loading}"
     >
     Update Fitbit data
     <span>Last updated {{updateTimeFormatted}}</span>
 </button>
+<button class="is-loading" *ngIf="loading">Updating from data from Fitbit</button>
