--- a/client/src/pages/activity-plan/activity-plan.page.html
+++ b/client/src/pages/activity-plan/activity-plan.page.html
@@ -1,9 +1,19 @@
 <app-page
     title="Activity Plan"
+    dismiss="Cancel"
     (onDismiss)="dismiss()"
     >
-    <a *ngIf="!activityPlan.complete" (click)="goToComplete()">Complete Plan</a>
-    <a *ngIf="activityPlan.activityLogId" (click)="goToActivityLog()">Edit activity log</a>
+    <a *ngIf="!activityPlan.complete"
+        app-page-control
+        (click)="goToComplete()"
+        >
+        Complete
+    </a>
+    <a *ngIf="activityPlan.activityLogId"
+        (click)="goToActivityLog()"
+        >
+        Edit activity log
+    </a>
     <app-form
         [formGroup]="planForm"
         [disabled]="disabled"
