Show activity logs and plans in modal window

--- a/client/src/pages/activity-plan/create-plan.page.html
+++ b/client/src/pages/activity-plan/create-plan.page.html
@@ -1,6 +1,7 @@
 <app-page
     title="Create Activity Plan"
     (onDismiss)="back()"
+    dismiss="Cancel"
     >
     <app-form
         [formGroup]="planForm"
