--- a/client/src/pages/morning-survey/survey.page.html
+++ b/client/src/pages/morning-survey/survey.page.html
@@ -1,17 +1,23 @@
-<form>
-    <div>
-        <label>How do you feel about being active today?</label>
-        <heartsteps-range></heartsteps-range>
-    </div>
-    <div>
-        <label>How busy are you today?</label>
-        <heartsteps-range></heartsteps-range>
-    </div>
-    <div>
-        <label>How much wood would a woodchuck chuck, if a woodchuck could chuck wood?</label>
-        <heartsteps-range></heartsteps-range>
-    </div>
-    <div class="controls">
-        <button (click)="done()">Done</button>
-    </div>
-</form>
+<app-form
+    [formGroup]="form"
+    submitLabel="Complete"
+    (onSubmit)="done()"
+    >
+    <app-range-field
+        formControlName="busy"
+        label="How busy is your day going to be today?"  
+    ></app-range-field>
+    <app-range-field
+        formControlName="rested"
+        label="How well rested do you feel this morning?"
+    ></app-range-field>
+    <app-range-field
+        formControlName="committed"
+        label="How committed do you feel this morning to being physically active today?"
+    ></app-range-field>
+    <app-choice-field
+        formControlName="mood"
+        [options]="moodChoices"
+        >
+    </app-choice-field>
+</app-form>
