--- a/client/src/pages/home/stats.page.html
+++ b/client/src/pages/home/stats.page.html
@@ -1,4 +1,4 @@
-<article>
-    <h3>Details</h3>
-    <pages-daily-summary-list [summaries]="dailySummaries"></pages-daily-summary-list>
-</article>
+<activity-log-daily-summary *ngFor="let summary of dailySummaries"
+    [dailySummary]="summary"
+    >
+</activity-log-daily-summary>
