Fix start screen

--- a/client/src/pages/notifications/notification.page.html
+++ b/client/src/pages/notifications/notification.page.html
@@ -1,4 +1,4 @@
-<article>
-    <p class="headline">{{body}}</p>
-    <button (click)="dismiss()">Ok</button>
-</article>
+<div class="headline">
+    <p>{{body}}</p>
+</div>
+<button (click)="dismiss()">Ok</button>
