--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,8 +1,6 @@
-<div>
+<div class="headline">
     <div class="heartsteps-logo">Heartsteps</div>
     <h1>Welcome!</h1>
-    <p class="headline">Register your account and get started.</p>
+    <p>Register your account and get started.</p>
 </div>
-<div class="controls">
-    <button (click)="goToEnrollPage()">Enroll</button>
-</div>
+<button (click)="goToEnrollPage()">Enroll</button>
