Move logo location

--- a/client/src/pages/welcome/welcome.html
+++ b/client/src/pages/welcome/welcome.html
@@ -1,6 +1,8 @@
-<div class="headline">
+<div>
     <div class="heartsteps-logo">Heartsteps</div>
-    <h1>Welcome!</h1>
-    <p>Register your account and get started.</p>
+    <div class="headline">
+        <h1>Welcome!</h1>
+        <p>Register your account and get started.</p>
+    </div>
 </div>
 <button (click)="goToEnrollPage()">Enroll</button>
